[gd_scene load_steps=4 format=3 uid="uid://2jnpak886eyt"]

[ext_resource type="Script" uid="uid://rtcgldmwmkqa" path="res://demo/autoloads/profile_manager.gd" id="1_pog1u"]
[ext_resource type="Script" uid="uid://bnmyahdqpjit4" path="res://addons/easy_requests/requests.gd" id="2_ief38"]
[ext_resource type="Script" uid="uid://ci7sb1buynccb" path="res://addons/github_files/github_files.gd" id="3_ief38"]

[node name="ProfileManager" type="Node"]
script = ExtResource("1_pog1u")

[node name="Requests" type="Node" parent="."]
script = ExtResource("2_ief38")

[node name="SkinDownloadTimer" type="Timer" parent="."]
one_shot = true

[node name="SkinGithubFiles" type="HTTPRequest" parent="."]
script = ExtResource("3_ief38")
github_owner = "SMP2I-Community"
github_repository = "SkinAPI"
metadata/_custom_type_script = "uid://ci7sb1buynccb"

[node name="CapesGithubFiles" type="HTTPRequest" parent="."]
script = ExtResource("3_ief38")
github_owner = "SMP2I-Community"
github_repository = "SkinAPI"
metadata/_custom_type_script = "uid://ci7sb1buynccb"

[connection signal="timeout" from="SkinDownloadTimer" to="." method="_on_skin_download_timer_timeout"]
